# fastapi-backend

./: .env  .gitignore  manage.py  pyproject.toml  pytest.ini  requirements.txt  seed_data.py
app/: main.py
app/alembic/: env.py
app/alembic/versions/: d34ad5fb2473_initial_wakazi_tables.py
app/api/: deps.py  main.py
app/api/routes/: address.py  auth.py  healthz.py  users.py
app/core/: config.py  db.py  logger.py  security.py
app/models/: models.py
app/repositories/: address.py  base.py  user.py
app/services/: address.py  users.py
tests/: conftest.py  t.txt
tests/repos/: test_address_repo.py  test_base_repo.py  test_users_repo.py
tests/routes/: test_address_routes.py  test_auth.py  test_health.py  test_users_routes.py
tests/services/: test_address_service.py  test_user_service.py
tests/utils/: address.py  user.py  utils.py
